<resources>
    <string name="app_name">todoapp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_your_email">type your email</string>
    <string name="enter_your_password">enter your password</string>
    <string name="reenter_password">reenter password</string>
    <string name="already_registered">already registered</string>
    <string name="sign_in">sign in</string>
    <string name="not_registered">not registered</string>
    <string name="sign_up">sign up</string>
</resources>